fixed player page from not showing

--- a/src/App.css
+++ b/src/App.css
@@ -280,6 +280,8 @@ li {
     flex-direction: column;
     align-items: flex-start; /* Or stretch, if children should take full width by default */
     padding: 12px;
+    background-color: #636c53;
+    box-shadow: none;
   }
 
   .header-top-row {
@@ -292,6 +294,7 @@ li {
 
   .hamburger-menu {
     display: block; /* Show on mobile */
+    color: #ceb36e;
     /* No margin-bottom needed here now, spacing handled by .nav's margin-top */
   }
 
